--- a/package.json
+++ b/package.json
@@ -1,38 +1,52 @@
 {
   "name": "tc-components",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:ToucanToco/components.git"
-  },
-  "license": "proprietary",
-  "private": true,
   "version": "0.0.0",
-  "dependencies": {},
-  "devDependencies": {
-    "@intervolga/optimize-cssnano-plugin": "^1.0.6",
-    "css-loader": "^3.4.2",
-    "firebase-tools": "^7.15.1",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^3.2.0",
-    "lodash": "^4.17.15",
-    "node-sass": "^4.13.1",
-    "sass-loader": "^8.0.2",
-    "terser-webpack-plugin": "^2.3.5",
-    "vue": "^2.6.11",
-    "vue-loader": "^15.9.0",
-    "vue-router": "^3.1.6",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
-  },
+  "private": true,
   "scripts": {
-    "prebuild:docs": "rm -rf www",
-    "build:docs": "webpack --config build/webpack.docs-prod.js",
+    "serve": "vue-cli-service serve docs/index.js",
+    "build": "vue-cli-service build --target lib --name tc-components src/main.js",
+    "build:docs": "vue-cli-service build --dest www docs/index.js",
+    "test:unit": "vue-cli-service test:unit",
+    "lint": "vue-cli-service lint",
     "prefirebase:deploy:docs": "yarn build:docs",
     "firebase:deploy:docs": "firebase deploy",
-    "firebase:login": "firebase login",
-    "start:docs": "webpack-dev-server --config build/webpack.docs-dev.js"
+    "firebase:login": "firebase login"
+  },
+  "dependencies": {},
+  "peerDependencies": {
+    "vue": "^2.6.11"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "^4.2.0",
+    "@vue/cli-plugin-eslint": "^4.2.0",
+    "@vue/cli-plugin-unit-jest": "^4.2.0",
+    "@vue/cli-service": "^4.2.0",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/test-utils": "1.0.0-beta.31",
+    "babel-eslint": "^10.0.3",
+    "core-js": "^3.6.4",
+    "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-vue": "^6.1.2",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "html-webpack-plugin": "^3.2.0",
+    "firebase-tools": "^7.15.1",
+    "lint-staged": "^9.5.0",
+    "lodash": "^4.17.15",
+    "node-sass": "^4.13.1",
+    "prettier": "^1.19.1",
+    "sass-loader": "^8.0.2",
+    "vue": "^2.6.11",
+    "vue-router": "^3.1.6",
+    "vue-template-compiler": "^2.6.11"
+  },
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,jsx,vue}": [
+      "vue-cli-service lint",
+      "git add"
+    ]
   }
 }
