--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "babel-eslint": "^10.0.3",
     "core-js": "^3.6.4",
     "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-vue": "^6.1.2",
+    "firebase-tools": "^7.15.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
-    "firebase-tools": "^7.15.1",
     "lint-staged": "^9.5.0",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
+    "prettier": "^2.0.4",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
