--- a/.github/workflows/docs-publish.yml
+++ b/.github/workflows/docs-publish.yml
@@ -12,8 +12,9 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: npm run test:unit
-      - run: npm run build:docs
+      - run: yarn install
+      - run: yarn test:unit
+      - run: yarn build:docs
 
   publish:
     needs: build
