--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,8 +1,8 @@
-name: Docs publish
+name: npm publish
 
 on:
-  push:
-    branches: [master]
+  release:
+    types: [created]
 
 jobs:
   publish:
@@ -12,9 +12,10 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 13
+          registry-url: 'https://registry.npmjs.com'
       - run: yarn install
       - run: yarn test:unit
-      - run: yarn build:docs
-      - run: npx firebase deploy --token "$FIREBASE_TOKEN"
+      - run: yarn build
+      - run: npm publish --access public
         env:
-          FIREBASE_TOKEN: ${{secrets.firebase_token}}
+          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
