--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "serve": "vue-cli-service serve src/docs/index.js",
-    "build": "vue-cli-service build --target lib --name tc-components src/main.js",
+    "build": "vue-cli-service build --target lib --name tc-components src/main.js && rm ./dist/demo.html",
     "build:docs": "vue-cli-service build src/docs/index.js",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
@@ -14,6 +14,7 @@
     "url": "https://github.com/ToucanToco/components.git"
   },
   "license": "MIT",
+  "files": ["dist"],
   "main": "dist/tc-components.common.js",
   "peerDependencies": {
     "vue": "^2.6.11"
