--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -12,10 +12,12 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 13
-          registry-url: 'https://registry.npmjs.com'
+          registry-url: 'https://registry.npmjs.org'
       - run: yarn install
       - run: yarn test:unit
       - run: yarn build
-      - run: npm publish --access public
+      - run: |
+          cat .npmrc
+          npm publish --access public
         env:
-          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+          NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
