--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -17,7 +17,7 @@ jobs:
       - run: yarn test:unit
       - run: yarn build
       - run: |
-          cat .npmrc
+          cat /home/runner/work/_temp/.npmrc
           npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
