--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "url": "https://github.com/ToucanToco/components.git"
   },
   "license": "MIT",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "main": "dist/tc-components.common.js",
   "peerDependencies": {
     "vue": "^2.6.11"
@@ -24,17 +26,17 @@
     "@vue/cli-plugin-eslint": "^4.2.0",
     "@vue/cli-plugin-unit-jest": "^4.2.0",
     "@vue/cli-service": "^4.2.0",
-    "@vue/test-utils": "1.0.0-beta.31",
+    "@vue/test-utils": "1.0.2",
     "babel-eslint": "^10.0.3",
     "core-js": "^3.6.4",
-    "eslint": "^6.7.2",
+    "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-vue": "^6.1.2",
-    "firebase-tools": "^7.15.1",
+    "firebase-tools": "^8.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^3.2.0",
-    "lint-staged": "^9.5.0",
+    "html-webpack-plugin": "^4.3.0",
+    "lint-staged": "^10.2.2",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
     "prettier": "^2.0.4",
@@ -48,8 +50,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,vue}": [
-      "vue-cli-service lint",
-      "git add"
+      "vue-cli-service lint"
     ]
   }
 }
