Use node 14 in workflows

--- a/.github/workflows/docs-build.yml
+++ b/.github/workflows/docs-build.yml
@@ -6,11 +6,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Use node 12.x
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Use node 14.x
       uses: actions/setup-node@v1
       with:
-        node-version: 12.x
+        node-version: 14.x
     - name: Cache node modules
       uses: actions/cache@v1
       with:
@@ -22,6 +23,8 @@ jobs:
           ${{ runner.OS }}-
     - name: Install dependencies
       run: yarn install
+    - name: Test
+      run: yarn test:unit
     - name: Build
       run: yarn build:docs
     - name: Ping FeaturePeek
