--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -8,15 +8,21 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Use node 14.x
+        uses: actions/setup-node@v1
         with:
-          node-version: 13
+          node-version: 14.x
           registry-url: 'https://registry.npmjs.org'
           scope: '@toucantoco'
-      - run: yarn install
-      - run: yarn test:unit
-      - run: yarn build
-      - run: npm publish --access public
+      - name: Install dependencies
+        run: yarn install
+      - name: Test
+        run: yarn test:unit
+      - name: Build
+        run: yarn build
+      - name: Publish
+        run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
