--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "peerDependencies": {
     "vue": "^2.6.11"
   },
+  "dependencies": {
+    "vue-multiselect": "^2.1.6"
+  },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
     "@vue/cli-plugin-eslint": "^4.2.0",
